mxslc/tests/data/error/amb_func_1.mxsl
image("albedo.png", texcoord=texcoord());
